test/fail/ajaxnonstringid.app
//Error: Templatecall id's can only be plain id's
application test

section pages

define page home() {
  //var s: String := "hoi"
  block[id:= "s"] { "hoi1"} 
}
